# powderpunk_mmo

./: .gitignore  .gitmodules  README.md
application/: CMakeLists.txt
application/gui/: CMakeLists.txt
application/gui/src/: CMakeLists.txt  compile_commands.json  main.cpp
application/gui/src/GUI/: CMakeLists.txt  gui.cpp  gui.h
application/src/: CMakeLists.txt  compile_commands.json  main.cpp  main_app_gui.cpp
application/src/Debugtools/: CMakeLists.txt  print_and_assert.h
application/src/GUI/: CMakeLists.txt  gui.cpp  gui.h  verticalbox.cpp  verticalbox.h
application/src/Window/: CMakeLists.txt  window.cpp  window.h
doc/: modules_description.md
docs/: game_description.md  ideas_mindmap.minder  modules_description.md
logs/: TODO.txt  dev_ideas.md  mindmap.minder
server/: CMakeLists.txt
server/configs/user_interaction/: communication.json
server/src/: CMakeLists.txt  compile_commands.json  main.cpp
server/src/DataStructures/: CMakeLists.txt
server/src/DataStructures/include/DataStructures/: event.h  event.hpp  location.h  location.hpp  user.h  user.hpp  user_command.h  user_command.hpp
server/src/DataStructures/src/: location.cpp  location.hpp  user_command.c  user_command.cpp  user_command.h
server/src/DataStructures/src/Commands/: user_command.cpp  user_command.h
server/src/DataStructures/src/Event/: event.cpp  event.h
server/src/DataStructures/src/User/: user.cpp  user.h
server/src/DebugTools/: CMakeLists.txt  assert_debug_print.h
server/src/DebugTools/include/DebugTools/: assert_debug_print.h
server/src/GameServer/: CMakeLists.txt
server/src/GameServer/include/GameServer/: commands.h  commands.hpp  game_server.h  game_server.hpp
server/src/GameServer/src/: game_server.cpp  game_server.h  game_server.hpp
server/src/GameServer/src/Commands/: commands.h  commands.hpp
server/src/Logger/: CMakeLists.txt
server/src/Logger/include/Logger/: logger.h  logger.hpp
server/src/Logger/src/: logger.cpp  logger.h  logger.hpp
server/src/LoginManager/: CMakeLists.txt
server/src/LoginManager/include/LoginManager/: login_manager.h  login_manager.hpp
server/src/LoginManager/src/: login_manager.cpp  login_manager.h  login_manager.hpp
server/src/SilicaScript/: CMakeLists.txt
server/src/SilicaScript/src/: SilicaParser.cpp
server/src/TelnetInterface/: CMakeLists.txt
server/src/TelnetInterface/include/TelnetInterface/: telnet_interface.h
server/src/TelnetInterface/src/: telnet_connection.cpp  telnet_connection.h  telnet_server.cpp  telnet_server.h
server/src/TextInterface/: CMakeLists.txt
server/src/TextInterface/TelnetInterface/: CMakeLists.txt
server/src/TextInterface/TelnetInterface/include/TelnetInterface/: telnet_interface.hpp
server/src/TextInterface/TelnetInterface/src/: telnet_connection.cpp  telnet_connection.h  telnet_connection.hpp  telnet_server.cpp  telnet_server.h  telnet_server.hpp
server/src/TextInterface/TextInputTranslator/: CMakeLists.txt
server/src/TextInterface/TextInputTranslator/include/TextInputTranslator/: text_input_translator.h
server/src/TextInterface/TextToCommand/: CMakeLists.txt
server/src/TextInterface/TextToCommand/include/TextToCommand/: text_to_command.h  text_to_command.hpp
server/src/TextInterface/TextToCommand/src/: text_to_command.cpp  text_to_command.h  text_to_command.hpp
server/src/TextInterface/include/TextInterface/: text_interface.h
server/src/Utils/: CMakeLists.txt
server/src/Utils/include/Utils/BasicConnection/: basic_connection.h  basic_connection.hpp  ts_queue.h
server/src/Utils/include/Utils/BasicServer/: basic_server.h  basic_server.hpp
server/src/Utils/include/Utils/DebugTools/: assert_debug_print.h
server/src/Utils/include/Utils/TSStructures/: ts_map.h  ts_map.hpp  ts_queue.h
