#####################################################################
# Creating TelnetInterface library target
#####################################################################

cmake_minimum_required(VERSION 3.17)

#####################################################################
# Building local libs 
#####################################################################
add_subdirectory(TelnetInterface)
add_subdirectory(TextInputTranslator)
