#####################################################################
# Creating TextInterface library target
#####################################################################

cmake_minimum_required(VERSION 3.17)

set(project TextInterface)
project(${project} LANGUAGES CXX)

add_subdirectory(TelnetInterface)

